syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";



message EventSubRequest {
    string token = 1;
    string channel = 2;
    string peer_server = 3; // peer server address (ip:port)
}

message EventSubResponse {
    string subscriptionId = 1;
}

message EventPubRequest {
    string token = 1;
    string subscriptionId = 2;
    string channel = 3;
    CloudEvent data = 4;
}

message EventPubResponse {
    string subscriptionId = 1;
}

message CloudEvent {

  // -- CloudEvent Context Attributes

  // Required Attributes
  string id = 1;
  string source = 2; // URI-reference
  string spec_version = 3;
  string type = 4;

  // Optional & Extension Attributes
  map<string, CloudEventAttributeValue> attributes = 5;

  // -- CloudEvent Data (Bytes, Text, or Proto)
  oneof  data {
    bytes binary_data = 6;
    string text_data = 7;
    google.protobuf.Any proto_data = 8;
  }


  string time = 9; // Timestamp
  string subject = 10; // optional sub topic of the event 
  string schema_url = 11; // URI

  /**
   * The CloudEvent specification defines
   * seven attribute value types...
   */

  message CloudEventAttributeValue {

    oneof attr {
      bool ce_boolean = 1;
      int32 ce_integer = 2;
      string ce_string = 3;
      bytes ce_bytes = 4;
      string ce_uri = 5;
      string ce_uri_ref = 6;
      google.protobuf.Timestamp ce_timestamp = 7;
    }
  }
}

/**
 * CloudEvent Protobuf Batch Format
 *
 */

message CloudEventBatch {
  repeated CloudEvent events = 1;
}
